--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,10 +1,11 @@
 {
   "dependencies": {
-    "com.unity.ai.navigation": "1.1.5",
     "com.unity.burst": "1.8.12",
     "com.unity.collab-proxy": "2.2.0",
     "com.unity.collections": "2.1.4",
     "com.unity.feature.development": "1.0.1",
+    "com.unity.inputsystem": "1.6.3",
+    "com.unity.mathematics": "1.2.6",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.4",
     "com.unity.ugui": "1.0.0",
