--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -83,7 +83,6 @@
     <Compile Include="Assets\Scripts\InputProviders\Graph\IPTreeReader.cs" />
     <Compile Include="Assets\Scripts\Unit\UnitSelect\UnitClickSelect.cs" />
     <Compile Include="Assets\Scripts\System\MainMenuManager.cs" />
-    <Compile Include="Assets\Scripts\Unit\UnityInteractions.cs" />
     <Compile Include="Assets\Scripts\InputProviders\Graph\IPGraphReader.cs" />
     <Compile Include="Assets\Scripts\Unit\UnitCloseCombat.cs" />
     <Compile Include="Assets\Scripts\Utility\RandomUtility.cs" />
@@ -765,9 +764,6 @@
     <Reference Include="Unity.VisualScripting.Shared.Editor">
       <HintPath>Library\ScriptAssemblies\Unity.VisualScripting.Shared.Editor.dll</HintPath>
     </Reference>
-    <Reference Include="XNode">
-      <HintPath>Library\ScriptAssemblies\XNode.dll</HintPath>
-    </Reference>
     <Reference Include="Unity.VisualStudio.Editor">
       <HintPath>Library\ScriptAssemblies\Unity.VisualStudio.Editor.dll</HintPath>
     </Reference>
@@ -822,9 +818,6 @@
     <Reference Include="Unity.Collections">
       <HintPath>Library\ScriptAssemblies\Unity.Collections.dll</HintPath>
     </Reference>
-    <Reference Include="XNodeEditor">
-      <HintPath>Library\ScriptAssemblies\XNodeEditor.dll</HintPath>
-    </Reference>
     <Reference Include="Unity.VisualScripting.State.Editor">
       <HintPath>Library\ScriptAssemblies\Unity.VisualScripting.State.Editor.dll</HintPath>
     </Reference>
@@ -852,6 +845,10 @@
       <Project>{43EC6BF6-07D3-053F-FE53-1C212B3EA8CC}</Project>
       <Name>Assembly-CSharp-firstpass</Name>
     </ProjectReference>
+    <ProjectReference Include="XNode.csproj">
+      <Project>{AFE5D069-243E-DD43-C1E3-0412AC6380A2}</Project>
+      <Name>XNode</Name>
+    </ProjectReference>
     <ProjectReference Include="AYellowpaper.SerializedCollections.csproj">
       <Project>{B5D52E7B-7A11-AF82-77C1-1AED08190501}</Project>
       <Name>AYellowpaper.SerializedCollections</Name>
@@ -859,6 +856,10 @@
     <ProjectReference Include="AYellowpaper.SerializedCollections.Editor.csproj">
       <Project>{6678409E-B8E7-D100-C7BF-06D83856D548}</Project>
       <Name>AYellowpaper.SerializedCollections.Editor</Name>
+    </ProjectReference>
+    <ProjectReference Include="XNodeEditor.csproj">
+      <Project>{8D2168C5-402F-7613-7E10-48CCC0CC83A7}</Project>
+      <Name>XNodeEditor</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
