Fix Pathfinding + Mutli Unit Pathfinding
Fixed a bug with multiples unit pathfinding at the same time.
Now multiple selected units will pathfind to different close points to prevent units clipping into each other

--- a/Assembly-CSharp-Editor.csproj
+++ b/Assembly-CSharp-Editor.csproj
@@ -59,6 +59,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Editor\InputMiddlewareNodeDrawer.cs" />
+    <Compile Include="Assets\Editor\TimerManagerDrawer.cs" />
     <Compile Include="Assets\Editor\IPGraphDrawer.cs" />
     <Compile Include="Assets\Editor\TerrainManagerDrawer.cs" />
     <Compile Include="Assets\Editor\IMChanceNodeDrawer.cs" />
