--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -88,13 +88,14 @@
     <Compile Include="Assets\Scripts\Unit\UnitMovements.cs" />
     <Compile Include="Assets\Scripts\Unit\UnitSelect\UnitClickSelect.cs" />
     <Compile Include="Assets\Scripts\System\MainMenuManager.cs" />
+    <Compile Include="Assets\Scripts\Unit\UnitHealth.cs" />
     <Compile Include="Assets\Scripts\InputProviders\Graph\IPGraphReader.cs" />
-    <Compile Include="Assets\Scripts\Unit\UnitCloseCombat.cs" />
     <Compile Include="Assets\Scripts\Utility\RandomUtility.cs" />
     <Compile Include="Assets\Scripts\Terrain\TileType_SO.cs" />
     <Compile Include="Assets\Scripts\InputProviders\InputProviderBase.cs" />
     <Compile Include="Assets\Scripts\UI\UnitInfoDisplay.cs" />
     <Compile Include="Assets\Scripts\InputProviders\Graph\BaseIMNode.cs" />
+    <Compile Include="Assets\Scripts\Unit\UnitCombat.cs" />
     <Compile Include="Assets\Scripts\UI\UnitsDisplayUI.cs" />
     <Compile Include="Assets\Scripts\Utility\TextUtility.cs" />
     <Compile Include="Assets\Scripts\Player\PlayerMvmt.cs" />
